# graphon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  cog.toml  prek.toml  pyproject.toml
.github/workflows/: autofix.yml  cla.yml  pr.yml  pypi_publish.yml  release.yml  test.yml  test_pypi_publish.yml
docs/adr/: 0001-variable-mutability.md
examples/: openai_slim_support.py
examples/graphon_agent_mode/: .env.example  README.md  __init__.py  support.py  workflow.py  workspace_tools.py
examples/graphon_openai_slim/: .env.example  workflow.py
examples/openai_slim_minimal/: .env.example  README.md  __init__.py  workflow.py
examples/openai_slim_parallel_translation/: .env.example  README.md  __init__.py  parallel_translation_workflow.py  workflow.py
signatures/version1/: cla.json
src/graphon/: enums.py  variable_loader.py  workflow_builder.py  workflow_type_encoder.py
src/graphon/entities/: base_node_data.py  exc.py  graph_config.py  graph_init_params.py  pause_reason.py  workflow_node_execution.py
src/graphon/file/: __init__.py  constants.py  enums.py  file_factory.py  file_manager.py  helpers.py  models.py  protocols.py  runtime.py  tool_file_parser.py
src/graphon/graph/: graph.py  graph_template.py  validation.py
src/graphon/graph_engine/: _engine_utils.py  error_handler.py  graph_engine.py  graph_state_manager.py  manager.py  worker.py
src/graphon/graph_engine/command_channels/: README.md  redis_channel.py
src/graphon/graph_engine/command_processing/: __init__.py  command_handlers.py  command_processor.py
src/graphon/graph_engine/domain/: graph_execution.py
src/graphon/graph_engine/entities/: commands.py
src/graphon/graph_engine/event_management/: event_handlers.py  event_manager.py
src/graphon/graph_engine/graph_traversal/: edge_processor.py
src/graphon/graph_engine/layers/: README.md  base.py  debug_logging.py  execution_limits.py
src/graphon/graph_engine/orchestration/: dispatcher.py  execution_coordinator.py
src/graphon/graph_engine/ready_queue/: __init__.py  factory.py  protocol.py
src/graphon/graph_engine/response_coordinator/: coordinator.py  path.py  session.py
src/graphon/graph_engine/worker_management/: worker_pool.py
src/graphon/graph_events/: graph.py  node.py
src/graphon/http/: __init__.py  client.py  protocols.py  response.py  runtime.py
src/graphon/model_runtime/: README.md  __init__.py  runtime.py
src/graphon/model_runtime/callbacks/: base_callback.py  logging_callback.py
src/graphon/model_runtime/entities/: defaults.py  llm_entities.py  message_entities.py  model_entities.py  provider_entities.py
src/graphon/model_runtime/errors/: validate.py
src/graphon/model_runtime/memory/: prompt_message_memory.py
src/graphon/model_runtime/model_providers/: model_provider_factory.py
src/graphon/model_runtime/protocols/: __init__.py  llm_runtime.py  moderation_runtime.py  provider_runtime.py  rerank_runtime.py  runtime.py  speech_to_text_runtime.py  text_embedding_runtime.py  tts_runtime.py
src/graphon/model_runtime/schema_validators/: common_validator.py  model_credential_schema_validator.py  provider_credential_schema_validator.py
src/graphon/model_runtime/slim/: package_loader.py  prepared_llm.py  runtime.py
src/graphon/model_runtime/utils/: encoders.py
src/graphon/node_events/: base.py  node.py
src/graphon/nodes/: protocols.py  runtime.py  tool_runtime_entities.py
src/graphon/nodes/answer/: answer_node.py  entities.py
src/graphon/nodes/base/: __init__.py  node.py  template.py  usage_tracking_mixin.py  variable_template_parser.py
src/graphon/nodes/code/: code_node.py  entities.py  exc.py
src/graphon/nodes/document_extractor/: __init__.py  node.py
src/graphon/nodes/end/: end_node.py  entities.py
src/graphon/nodes/http_request/: __init__.py  config.py  entities.py  executor.py  node.py
src/graphon/nodes/human_input/: entities.py  human_input_node.py
src/graphon/nodes/if_else/: if_else_node.py
src/graphon/nodes/iteration/: entities.py  iteration_node.py  iteration_start_node.py
src/graphon/protocols/: __init__.py
src/graphon/runtime/: __init__.py  graph_runtime_state.py  read_only_wrappers.py  variable_pool.py
src/graphon/utils/: json_in_md_parser.py
src/graphon/variables/: consts.py  factory.py  input_entities.py  segments.py  types.py  utils.py  variables.py
tests/: test_protocols_exports.py  test_workflow_builder.py
tests/entities/: test_pause_reason.py  test_workflow_execution_status.py  test_workflow_node_execution.py
tests/examples/: test_graphon_agent_mode.py  test_graphon_openai_slim.py  test_openai_slim_examples.py  test_parallel_translation_workflow.py
tests/file/: test_file_manager.py  test_models.py  test_tool_file_parser.py
tests/graph/: test_graph.py  test_graph_validation.py
tests/graph_engine/graph_traversal/: test_skip_propagator.py
tests/helpers/: __init__.py  builders.py
tests/http/: test_client.py
tests/model_runtime/: test_common_entities.py  test_encoders.py  test_large_language_model_non_stream_result.py  test_large_language_model_tool_calls.py  test_message_entities.py  test_model_dispatch.py
tests/model_runtime/slim/: test_runtime.py
tests/node_events/: test_node_event_aliases.py
tests/nodes/: test_code_node.py  test_container_variable_mutability.py  test_human_input_runtime_binding.py
tests/nodes/base/: test_template.py  test_variable_template_parser.py
tests/nodes/document_extractor/: test_dispatch.py
tests/nodes/http_request/: test_dispatch.py
tests/nodes/human_input/: test_human_input_node.py
tests/nodes/if_else/: test_if_else_node.py
tests/nodes/llm/: test_file_saver.py  test_node.py
tests/nodes/parameter_extractor/: test_entities.py  test_prompts.py
tests/nodes/question_classifier/: test_question_classifier_node.py
tests/nodes/tool/: test_entities.py  test_tool_node.py
tests/nodes/variable_assigner/: test_v1_node.py  test_v2_helpers.py  test_v2_node.py
tests/runtime/: test_graph_runtime_state.py  test_variable_pool.py
tests/utils/: test_condition_processor.py
(+48 files in other folders)
