[project]
name = 'graphon'
readme = 'README.md'
version = '0.1.0'
requires-python = '>=3.11,<3.13'
dependencies = [
    'charset-normalizer>=3.4.4',
    'httpx~=0.28.0',
    'json-repair>=0.55.1',
    'jsonschema>=4.25.1',
    'orjson>=3.10.0,<4.0.0',
    'pandas[excel]~=3.0.1',
    'pydantic~=2.12.5',
    'pydantic-extra-types~=2.11.0',
    'pypdfium2==5.6.0',
    'python-docx~=1.2.0',
    'pyyaml~=6.0.1',
    'tiktoken~=0.12.0',
    'transformers~=5.3.0',
    'typing-extensions>=4.10.0',
    'unstructured[docx,epub,md,ppt,pptx]~=0.21.5',
    'pypandoc~=1.13',
    'webvtt-py~=0.5.1',
]

[project.urls]
source = 'https://pypi.org/project/graphon'
issues = 'https://github.com/langgenius/graphon/issues'
homepage = 'https://github.com/langgenius/graphon'

[dependency-groups]
dev = ['pytest', 'pytest-cov', 'pytest-mock', 'pytest-xdist', 'ruff', 'prek']

[build-system]
requires = ['uv_build>=0.11.1,<0.12.0']
build-backend = 'uv_build'

[tool.uv]
default-groups = ['dev']

[tool.ruff]
fix = true
preview = true
required-version = '>=0.15'

[tool.ruff.lint]
select = ['ALL']
ignore = [
    'ERA',    # 存在误识别问题
    'COM',    # 与格式化冲突
    'ISC001', # 与格式化冲突
    'ANN',    # 全标注要求太过严苛
    'S',      # 不适用
    'D',      # 不适用
    'PGH003', # 不适用
    'CPY',    # 不适用
    'FBT',    # 不适用
    'SLF',    # 不适用
    'TID',    # 不适用
    'FIX',    # 不适用
    ########### TODO(99): 临时禁用 ###########
    'TRY003',
    'TC001',
    'G004',
    'T201',
    'E501',
    'C901',
    'TC003',
    'TRY004',
    'BLE001',
    'TRY400',
    'RUF001',
    'B904',
    'A002',
    'TD003',
    'RET504',
    'TRY300',
    'PLW1514',
    'TD002',
    'DTZ005',
    'PLW2901',
    'TRY002',
    'A001',
    'G003',
    'RUF005',
    'PLW0603',
    'TRY301',
    'EXE001',
    'INP001',
    'N806',
    'RUF052',
    'UP007',
    'B901',
    'N815',
    'PLW0108',
    'TD001',
    'TD004',
    'TD005',
    'E721',
    'FURB101',
    'ISC004',
    'LOG004',
    'PD002',
    'PERF402',
    'PIE810',
    'PLW0602',
    'PTH100',
    'PTH118',
    'PTH120',
    'RET503',
    'RUF012',
    'RUF027',
    'RUF066',
    'RUF070',
    'TRY201',
    'DOC201',
    'EM102',
    'EM101',
    'PLR6301',
    'DOC501',
    'ARG002',
    'PLR2004',
    'PLR0913',
    'PLR0912',
    'PLR0917',
    'PLR1702',
    'PLC0415',
    'PLR0911',
    'PLR6201',
    'PLR0915',
    'ARG003',
    'PLR0914',
    'PLC1901',
    'PT011',
    'DOC402',
    'RUF069',
    'ARG001',
    'DOC202',
    'DOC502',
    'PLC2701',
    'PLR0904',
    'PLR0916',
    'PLR1714',
    'A004',
    'ARG004',
    'ARG005',
    'DOC102',
    'DTZ001',
    'PLR6104',
    'SIM117',
]


[tool.pytest]
minversion = '9.0'
addopts = ['-n', 'auto']
testpaths = ['tests']
