[project]
name = 'graphon'
version = "0.3.0"
description = 'Graph execution engine for agentic AI workflows.'
readme = 'README.md'
license = 'Apache-2.0'
license-files = ['LICENSE']
# Keep Python support aligned with `unstructured`, which currently declares
# `Requires-Python: <3.14,>=3.11`.
requires-python = '>=3.12,<3.14'
dependencies = [
    'charset-normalizer>=2.1',
    'httpx>=0.28',
    'json-repair>=0.55',
    'jsonschema>=4',
    'orjson>=3',
    'pandas[excel]>=2.1',
    'pydantic>=2.7',
    'pydantic-extra-types>=2',
    'pypdfium2>=5',
    'python-docx>=1.2',
    'pyyaml>=6',
    'tiktoken>=0.12',
    'transformers>=4',
    'typing-extensions>=4.10.0',
    'unstructured[docx,epub,md,ppt,pptx]>=0.21',
    'pypandoc>=1.13',
    'webvtt-py>=0.5',
]

[project.urls]
source = 'https://github.com/langgenius/graphon'
homepage = 'https://github.com/langgenius/graphon'
issues = 'https://github.com/langgenius/graphon/issues'

[dependency-groups]
dev = [
    'pytest',
    'pytest-cov',
    'pytest-mock',
    'pytest-xdist',
    'ruff',
    'prek',
    'ty',
]

[build-system]
requires = ['uv_build~=0.11']
build-backend = 'uv_build'

[tool.uv]
default-groups = ['dev']

[tool.ruff]
fix = true
preview = true
required-version = '>=0.15'

[tool.ruff.lint]
select = ['ALL']
ignore = [
    'COM812',  # Conflicts with `ruff format`.
    'ERA001',  # False positives are common.
    'TC',      # Runtime use of typing constructs is common now.
    'CPY',     # Covered by the standalone LICENSE file.
    'PLR0913', # Explicit is better than implicit.
    'PLR0917', # Complex is better than complicated.
    'PLR6301', # Violates the usual practice.
    'D',       # Too verbose.
    'FBT',     # Too strict.
    'TID252',  # Too absolute.
    'ANN401',  # We hope to enforce this, but typing is still evolving.
]

[tool.ruff.lint.pydoclint]
ignore-one-line-docstrings = true

[tool.ruff.lint.per-file-ignores]
'tests/**/*.py' = [
    'S101',    # Assert statements used for pytest.
    'PLR2004', # Magic value used in test cases.
]

[tool.ty.environment]
python-platform = "linux"

[tool.pytest]
minversion = '9.0'
addopts = ['-n', 'auto']
testpaths = ['tests']
